<resources>
    <string name="app_name">upfinder</string>

    <!--用户相关-->
    <string name="user_count">账号 | 手机号</string>
    <string name="user_pwd">密码</string>
    <string name="user_pwd_confirm">确认密码</string>
    <string name="count_logo">头像</string>
    <string name="user_nick">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_sign">个性签名</string>

    <!--操作相关-->
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="have_count">已有账户，直接登录</string>
    <string name="setting">设置</string>
    <string name="logout">退出</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="picture">图片</string>
    <string name="camera">拍照</string>
    <string name="location">位置</string>
    <string name="send_msg">发消息</string>
    <string name="add_friends">加好友</string>
    <string name="tab_nearby">附近</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_msg">消息</string>
    <string name="tab_count">我</string>
    <string name="scan">扫一扫</string>

    <!--提示相关-->
    <string name="login_success">登陆成功</string>
    <string name="count_err">账号格式错误</string>
    <string name="pwd_err">密码格式错误</string>
    <string name="pwd_confirm_err">两次输入密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败：</string>
    <string name="non_conversation">暂无会话</string>
    <string name="pic_out_max_num">已达到照片选择上限</string>
    <string name="no_camera">没有找到摄像头</string>
    <string name="long_click_speak">长按说话</string>


    <!--显示相关-->
    <string name="photos_num">%1$d张</string>
    <string name="new_friend">新的朋友</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eggs">彩蛋</string>
    <string name="chat_group">发起群聊</string>
    <string name="help">帮助与反馈</string>


</resources>
