<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.upfinder.upfinder.Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:padding="@dimen/activity_horizontal_margin"
        android:scrollbars="none"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            >

            <ImageView
                android:id="@+id/ivLogo"
                style="@style/SingleLogo"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_logo"
                android:src="@mipmap/ic_launcher"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLogo"
                android:layout_marginTop="@dimen/height_default"
                android:background="@drawable/bg_white_1px_gray_border"
                >

                <EditText
                    android:id="@+id/etLoginCount"
                    style="@style/EditTextSingle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_default"
                    android:hint="@string/user_count"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilCount"
                android:background="@drawable/bg_white_1px_gray_border"
                >

                <EditText
                    android:id="@+id/etLoginPwd"
                    style="@style/EditTextSingle"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="@dimen/height_default"
                    android:hint="@string/user_pwd"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonSingle"
                android:layout_below="@id/tilPwd"
                android:layout_marginTop="@dimen/height_default"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white_default"
                />

        </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/padding_default"
        android:layout_marginRight="@dimen/padding_default"
        android:background="@drawable/bg_gray_10dp_corners_1px_gray_border"
        android:text="@string/register"
        android:textSize="@dimen/text_big"/>

    <TextView
        android:id="@+id/tvForgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/padding_default"
        android:gravity="center"
        android:padding="@dimen/padding_default"
        android:text="@string/forget_pwd"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_default"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="invisible"
        />


</RelativeLayout>
