<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".Activity.EditCountInfoActivity"
    >

    <LinearLayout
        android:id="@+id/llEditUserLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/count_logo"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@id/ivCountUserLogo"
            android:layout_width="@dimen/widget_xlarge"
            android:layout_height="@dimen/widget_xlarge"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/light_gray"
        />

    <LinearLayout
        android:id="@+id/llEditUserNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/user_nick"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView
            android:id="@id/tvCountUserNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="upfinder"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_default"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/user_count"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tvCountNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="upfinder"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_default"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/height_default"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/user_sex"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tvCountUserSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="男r"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_default"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:id="@+id/llEditUserSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/user_sign"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tvCountUserSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="发现美，发现爱！"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_default"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/user_count"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_big"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="upfinder"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/text_default"
            />

    </LinearLayout>

</LinearLayout>
